--- a/.env.example
+++ b/.env.example
@@ -61,4 +61,6 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+TELESCOPE_ENABLED=true
+
 VITE_APP_NAME="${APP_NAME}"
