--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
