--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "naive-ui": "^2.38.2",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
