--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@vicons/antd": "^0.12.0",
+        "@vicons/carbon": "^0.12.0",
+        "@vicons/fa": "^0.12.0",
+        "@vicons/fluent": "^0.12.0",
+        "@vicons/ionicons4": "^0.12.0",
+        "@vicons/ionicons5": "^0.12.0",
+        "@vicons/material": "^0.12.0",
+        "@vicons/tabler": "^0.12.0",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
