--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "laravel-vue-i18n": "^2.7.6",
         "naive-ui": "^2.38.2",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
