--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
+        "mews/captcha": "^3.3",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
