max_line_length为160

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 quote_type = single
+max_line_length = 160
 
 [*.md]
 trim_trailing_whitespace = false
