--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "laravel-vite-plugin": "^1.0",
         "laravel-vue-i18n": "^2.7.6",
         "naive-ui": "^2.38.2",
+        "pinia": "^2.1.7",
+        "pinia-plugin-persistedstate": "^3.2.1",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
