--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@vicons/material": "^0.12.0",
         "@vicons/tabler": "^0.12.0",
         "@vitejs/plugin-vue": "^5.0.0",
+        "@vueuse/components": "^10.9.0",
+        "@vueuse/core": "^10.9.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
