--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ APP_FAKER_LOCALE=zh_CN
 APP_MAINTENANCE_DRIVER=cache
 APP_MAINTENANCE_STORE=database
 
+APP_YEAR=null
+APP_BEIAN_NUMBER=null
+APP_BEIAN_HREF=null
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -65,4 +69,9 @@ TELESCOPE_ENABLED=true
 CAPTCHA_DISABLE=true
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_APP_YEAR="${APP_YEAR}"
+VITE_APP_BEIAN_NUMBER="${APP_BEIAN_NUMBER}"
+VITE_APP_BEIAN_HREF="${APP_BEIAN_HREF}"
+
 VITE_CAPTCHA_DISABLE="${CAPTCHA_DISABLE}"
