--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 TELESCOPE_ENABLED=true
 CAPTCHA_DISABLE=true
 
+ALIBABA_CLOUD_ACCESS_KEY_ID=
+ALIBABA_CLOUD_ACCESS_KEY_SECRET=
+ALIBABA_CLOUD_SMS_SIGN_NAME=
+ALIBABA_CLOUD_SMS_TEMPLATE_CODE_VERIFICATION=
+
 VITE_APP_NAME="${APP_NAME}"
 
 VITE_APP_YEAR="${APP_YEAR}"
