--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ APP_FAKER_LOCALE=zh_CN
 APP_MAINTENANCE_DRIVER=cache
 APP_MAINTENANCE_STORE=database
 
-APP_YEAR=null
-APP_BEIAN_NUMBER=null
-APP_BEIAN_HREF=null
+APP_YEAR=2020
+APP_BEIAN_NUMBER=
+APP_BEIAN_HREF=
 
 BCRYPT_ROUNDS=12
 
