广播系统启用

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,14 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+PUSHER_APP_ID="pusher-app-id"
+PUSHER_APP_KEY="pusher-key"
+PUSHER_APP_SECRET="pusher-secret"
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME="https"
+PUSHER_APP_CLUSTER="mt1"
+
 TELESCOPE_ENABLED=true
 CAPTCHA_DISABLE=true
 
@@ -78,5 +86,11 @@ VITE_APP_NAME="${APP_NAME}"
 VITE_APP_YEAR="${APP_YEAR}"
 VITE_APP_BEIAN_NUMBER="${APP_BEIAN_NUMBER}"
 VITE_APP_BEIAN_HREF="${APP_BEIAN_HREF}"
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 VITE_CAPTCHA_DISABLE="${CAPTCHA_DISABLE}"
