--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "@vueuse/core": "^10.9.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "laravel-vue-i18n": "^2.7.6",
         "naive-ui": "^2.38.2",
         "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^3.2.1",
         "postcss": "^8.4.31",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0",
