--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,17 @@ PUSHER_PORT=443
 PUSHER_SCHEME="https"
 PUSHER_APP_CLUSTER="mt1"
 
+SOKETI_DEBUG=0
+SOKETI_DEFAULT_APP_ID="${PUSHER_APP_ID}"
+SOKETI_DEFAULT_APP_KEY="${PUSHER_APP_KEY}"
+SOKETI_DEFAULT_APP_SECRET="${PUSHER_APP_SECRET}"
+SOKETI_SSL_CERT=
+SOKETI_SSL_KEY=
+SOKETI_SSL_PASS=
+SOKETI_SSL_CA=
+
 TELESCOPE_ENABLED=true
+
 CAPTCHA_DISABLE=true
 
 ALIBABA_CLOUD_ACCESS_KEY_ID=
