--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,7 @@ SOKETI_SSL_CA=
 TELESCOPE_ENABLED=true
 
 CAPTCHA_DISABLE=true
+CAPTCHA_TYPE=math
 
 ALIBABA_CLOUD_ACCESS_KEY_ID=
 ALIBABA_CLOUD_ACCESS_KEY_SECRET=
