增加VITE_CAPTCHA_TYPE配置

--- a/.env.example
+++ b/.env.example
@@ -105,3 +105,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 VITE_CAPTCHA_DISABLE="${CAPTCHA_DISABLE}"
+VITE_CAPTCHA_TYPE="${CAPTCHA_TYPE}"
