--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ APP_MAINTENANCE_STORE=database
 APP_YEAR=2020
 APP_BEIAN_NUMBER=
 APP_BEIAN_HREF=
+APP_LOGO=
 
 BCRYPT_ROUNDS=12
 
@@ -97,6 +98,7 @@ VITE_APP_NAME="${APP_NAME}"
 VITE_APP_YEAR="${APP_YEAR}"
 VITE_APP_BEIAN_NUMBER="${APP_BEIAN_NUMBER}"
 VITE_APP_BEIAN_HREF="${APP_BEIAN_HREF}"
+VITE_APP_LOGO="${APP_LOGO}"
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
