--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "laravel-vue-i18n": "^2.7.6",
+        "lodash": "^4.17.21",
         "naive-ui": "^2.38.2",
         "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^3.2.1",
