修改git忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,7 @@ npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
-/.vscode
+/.vscode/*
+!/.vscode/launch.json
+!/.vscode/settings.json
 /lang/php_*.json
