--- a/.env.example
+++ b/.env.example
@@ -69,7 +69,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID="pusher-app-id"
 PUSHER_APP_KEY="pusher-key"
 PUSHER_APP_SECRET="pusher-secret"
-PUSHER_HOST=
+PUSHER_HOST=127.0.0.1
 PUSHER_PORT=443
 PUSHER_SCHEME="https"
 PUSHER_APP_CLUSTER="mt1"
@@ -94,6 +94,7 @@ ALIBABA_CLOUD_SMS_SIGN_NAME=
 ALIBABA_CLOUD_SMS_TEMPLATE_CODE_VERIFICATION=
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_APP_LOCALE="${APP_LOCALE}"
 
 VITE_APP_YEAR="${APP_YEAR}"
 VITE_APP_BEIAN_NUMBER="${APP_BEIAN_NUMBER}"
