--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-    "private": true,
     "type": "module",
+    "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc && vite build"
+        "build": "vue-tsc && vite build",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vicons/antd": "^0.12.0",
-        "@vicons/carbon": "^0.12.0",
-        "@vicons/fa": "^0.12.0",
-        "@vicons/fluent": "^0.12.0",
-        "@vicons/ionicons4": "^0.12.0",
-        "@vicons/ionicons5": "^0.12.0",
-        "@vicons/material": "^0.12.0",
-        "@vicons/tabler": "^0.12.0",
-        "@vitejs/plugin-vue": "^5.0.0",
-        "@vueuse/components": "^10.9.0",
-        "@vueuse/core": "^10.9.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "@antfu/eslint-config": "^3.6.2",
+        "@iconify/json": "^2.2.249",
+        "@inertiajs/vue3": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.9",
+        "@vitejs/plugin-vue": "^5.1.3",
+        "@vueuse/components": "^11.1.0",
+        "@vueuse/core": "^11.1.0",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
+        "eslint": "^9.10.0",
+        "eslint-plugin-format": "^0.1.2",
         "laravel-echo": "^1.16.1",
-        "laravel-vite-plugin": "^1.0",
-        "laravel-vue-i18n": "^2.7.6",
+        "laravel-vite-plugin": "^1.0.5",
+        "laravel-vue-i18n": "^2.7.7",
         "lodash": "^4.17.21",
-        "naive-ui": "^2.38.2",
-        "pinia": "^2.1.7",
-        "pinia-plugin-persistedstate": "^3.2.1",
-        "postcss": "^8.4.31",
+        "naive-ui": "^2.39.0",
+        "pinia": "^2.2.2",
+        "pinia-plugin-persistedstate": "^4.0.1",
+        "postcss": "^8.4.47",
         "pusher-js": "^8.4.0-rc2",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
-        "vite": "^5.0",
-        "vue": "^3.4.0",
-        "vue-tsc": "^1.8.27"
+        "tailwindcss": "^3.4.11",
+        "typescript": "^5.6.2",
+        "unplugin-icons": "^0.19.3",
+        "vite": "^5.2.14",
+        "vue": "^3.5.6",
+        "vue-tsc": "^2.1.6"
     }
 }
