默认开启登录图形验证码

--- a/.env.example
+++ b/.env.example
@@ -85,7 +85,7 @@ SOKETI_SSL_CA=
 
 TELESCOPE_ENABLED=true
 
-CAPTCHA_DISABLE=true
+CAPTCHA_DISABLE=false
 CAPTCHA_TYPE=math
 
 ALIBABA_CLOUD_ACCESS_KEY_ID=
