全文搜索配置（Meilisearch）

--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,15 @@ SOKETI_SSL_KEY=
 SOKETI_SSL_PASS=
 SOKETI_SSL_CA=
 
+SCOUT_DRIVER=meilisearch
+SCOUT_QUEUE=true
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_KEY=masterKey
+MEILI_MASTER_KEY=masterKey
+MEILI_NO_ANALYTICS=true
+MEILI_ENV=development
+MEILI_LOG_LEVEL=INFO
+
 TELESCOPE_ENABLED=true
 
 CAPTCHA_DISABLE=false
