--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel-lang/common": "^6.3",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
+        "laravel/scout": "^10.11",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
+        "meilisearch/meilisearch-php": "^1.10",
         "mews/captcha": "^3.3",
         "overtrue/easy-sms": "^3.0",
         "pusher/pusher-php-server": "^7.2",
